# hmp

./: .gitignore  CMakeLists.txt  license.txt  makefile  readme.md
etc/: CMakeLists.txt  build_linux.sh  replay_linux.sh  tooling_env.sh
src/: CMakeLists.txt  buffer_t.cpp  buffer_t.h  cli.h  conf.h.in  consts.h  consts.h.in  deque.hpp  deque.hpp.in  hmp.cpp  hmplib.cpp  input.cpp  input.h  main.cpp  memory_t.cpp  meta.cpp  meta.h  path.cpp  path.h  path_t.cpp  path_t.h  platform.cpp  platform.h  timer_t.cpp  timer_t.h  util.cpp  util.h  util.hpp.in
src/cmake/: CMakeMacros.cmake
src/demo/: CMakeLists.txt  demo.cpp  demo.h  demo_data.cpp  demo_data.h
src/hmp/: CMakeLists.txt  hmp.cpp  hmp.h  hmp_bounds_t.cpp  hmp_bounds_t.h  hmp_box.cpp  hmp_box.h  hmp_box_t.cpp  hmp_box_t.h  hmp_consts.h  hmp_data.cpp  hmp_data.h  hmp_entities.cpp  hmp_entities.h  hmp_entity_t.cpp  hmp_entity_t.h  hmp_gfx.cpp  hmp_gfx.h  hmp_interval.cpp  hmp_interval.h  hmp_interval_t.cpp  hmp_interval_t.h  hmp_modes.cpp  hmp_modes.h  hmp_paddle_t.cpp  hmp_paddle_t.h  hmp_rng_t.cpp  hmp_rng_t.h  hmp_sfx.cpp  hmp_sfx.h  hmp_text.cpp  hmp_text.h  hmpbox.cpp  hmpbox.h  hmplib.h
src/meta/: CMakeLists.txt  meta.cpp  meta.h
src/plat/: CMakeLists.txt  cli.cpp  memory_t.cpp  memory_t.h  path_t.h  timer_t.cpp  timer_t.h
src/sim/: box_t.cpp  gfx.cpp  gfx.h  interval_t.h
src/util/: CMakeLists.txt  bindings_t.cpp  bindings_t.h  box_t.cpp  box_t.h  circle_t.cpp  circle_t.h  geom.cpp  geom.h  gfx.cpp  gfx.h  gui.cpp  gui.h  input.cpp  input.h  interval_t.cpp  interval_t.h  output.cpp  output.h  rng_t.cpp  rng_t.h  sfx.cpp  sfx.h
